# serializer version: 1
# name: test_all_entities[sensor.test_test_com_battery-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.test_test_com_battery',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': <SensorDeviceClass.BATTERY: 'battery'>,
    'original_icon': None,
    'original_name': 'Battery',
    'platform': 'poolsense',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': None,
    'unique_id': 'test@test.com-Battery',
    'unit_of_measurement': '%',
  })
# ---
# name: test_all_entities[sensor.test_test_com_battery-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'attribution': 'PoolSense Data',
      'device_class': 'battery',
      'friendly_name': 'test@test.com Battery',
      'unit_of_measurement': '%',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.test_test_com_battery',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '80',
  })
# ---
# name: test_all_entities[sensor.test_test_com_chlorine-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.test_test_com_chlorine',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Chlorine',
    'platform': 'poolsense',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'chlorine',
    'unique_id': 'test@test.com-Chlorine',
    'unit_of_measurement': <UnitOfElectricPotential.MILLIVOLT: 'mV'>,
  })
# ---
# name: test_all_entities[sensor.test_test_com_chlorine-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'attribution': 'PoolSense Data',
      'friendly_name': 'test@test.com Chlorine',
      'unit_of_measurement': <UnitOfElectricPotential.MILLIVOLT: 'mV'>,
    }),
    'context': <ANY>,
    'entity_id': 'sensor.test_test_com_chlorine',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '20',
  })
# ---
# name: test_all_entities[sensor.test_test_com_chlorine_high-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.test_test_com_chlorine_high',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Chlorine high',
    'platform': 'poolsense',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'chlorine_high',
    'unique_id': 'test@test.com-Chlorine High',
    'unit_of_measurement': <UnitOfElectricPotential.MILLIVOLT: 'mV'>,
  })
# ---
# name: test_all_entities[sensor.test_test_com_chlorine_high-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'attribution': 'PoolSense Data',
      'friendly_name': 'test@test.com Chlorine high',
      'unit_of_measurement': <UnitOfElectricPotential.MILLIVOLT: 'mV'>,
    }),
    'context': <ANY>,
    'entity_id': 'sensor.test_test_com_chlorine_high',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '30',
  })
# ---
# name: test_all_entities[sensor.test_test_com_chlorine_low-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.test_test_com_chlorine_low',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Chlorine low',
    'platform': 'poolsense',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'chlorine_low',
    'unique_id': 'test@test.com-Chlorine Low',
    'unit_of_measurement': <UnitOfElectricPotential.MILLIVOLT: 'mV'>,
  })
# ---
# name: test_all_entities[sensor.test_test_com_chlorine_low-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'attribution': 'PoolSense Data',
      'friendly_name': 'test@test.com Chlorine low',
      'unit_of_measurement': <UnitOfElectricPotential.MILLIVOLT: 'mV'>,
    }),
    'context': <ANY>,
    'entity_id': 'sensor.test_test_com_chlorine_low',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '20',
  })
# ---
# name: test_all_entities[sensor.test_test_com_last_seen-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.test_test_com_last_seen',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': <SensorDeviceClass.TIMESTAMP: 'timestamp'>,
    'original_icon': None,
    'original_name': 'Last seen',
    'platform': 'poolsense',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'last_seen',
    'unique_id': 'test@test.com-Last Seen',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_entities[sensor.test_test_com_last_seen-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'attribution': 'PoolSense Data',
      'device_class': 'timestamp',
      'friendly_name': 'test@test.com Last seen',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.test_test_com_last_seen',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '2021-01-01T00:00:00+00:00',
  })
# ---
# name: test_all_entities[sensor.test_test_com_ph-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.test_test_com_ph',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': <SensorDeviceClass.PH: 'ph'>,
    'original_icon': None,
    'original_name': 'pH',
    'platform': 'poolsense',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': None,
    'unique_id': 'test@test.com-pH',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_entities[sensor.test_test_com_ph-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'attribution': 'PoolSense Data',
      'device_class': 'ph',
      'friendly_name': 'test@test.com pH',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.test_test_com_ph',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '5',
  })
# ---
# name: test_all_entities[sensor.test_test_com_ph_high-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.test_test_com_ph_high',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'pH high',
    'platform': 'poolsense',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'ph_high',
    'unique_id': 'test@test.com-pH High',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_entities[sensor.test_test_com_ph_high-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'attribution': 'PoolSense Data',
      'friendly_name': 'test@test.com pH high',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.test_test_com_ph_high',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '7',
  })
# ---
# name: test_all_entities[sensor.test_test_com_ph_low-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.test_test_com_ph_low',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'pH low',
    'platform': 'poolsense',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'ph_low',
    'unique_id': 'test@test.com-pH Low',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_entities[sensor.test_test_com_ph_low-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'attribution': 'PoolSense Data',
      'friendly_name': 'test@test.com pH low',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.test_test_com_ph_low',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '4',
  })
# ---
# name: test_all_entities[sensor.test_test_com_temperature-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.test_test_com_temperature',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': <SensorDeviceClass.TEMPERATURE: 'temperature'>,
    'original_icon': None,
    'original_name': 'Temperature',
    'platform': 'poolsense',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'water_temp',
    'unique_id': 'test@test.com-Water Temp',
    'unit_of_measurement': <UnitOfTemperature.CELSIUS: '°C'>,
  })
# ---
# name: test_all_entities[sensor.test_test_com_temperature-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'attribution': 'PoolSense Data',
      'device_class': 'temperature',
      'friendly_name': 'test@test.com Temperature',
      'unit_of_measurement': <UnitOfTemperature.CELSIUS: '°C'>,
    }),
    'context': <ANY>,
    'entity_id': 'sensor.test_test_com_temperature',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '6',
  })
# ---
